  of legacy test programs into a test suite, and also to demonstrate
  that the run-time engine is generic enough to support different test
  interfaces.

* Issue 11: Added the 'config' subcommand.  This command allows the end
  user to inspect the current configuration variables after evaluation,
  without having to read through configuration files.

* Issue 11: Removed the test_suites_var function from configuration
  files.  This was used to set the value of test-suite-sepecific
  variables, but it was ugly-looking.  It is now possible to use the
  more natural syntax 'test_suites.<test-suite-name>.<variable> =
  <value>'.

* Issue 23: Enabled detection of unused parameters and variables in the
  code and fixed all warnings.

* Issue 22: Changed the behavior of "developer mode".  Compiler warnings
  are now enabled unconditionally regardless of whether we are in
  developer mode or not; developer mode is now only used to perform
  strict warning checks and to enable assertions.  Additionally,
  developer mode is now only automatically enabled when building from the
  repository, not for formal releases.


Changes in version 0.1
======================

Experimental version released on June 23rd, 2011.

This is the first public release of the kyua-cli package.

The scope of this release is to provide functional replacement for the
'atf-run' utility included in the atf package.  At this point, 'kyua'
can reliably run the NetBSD 5.99.53 test suite delivering the same
results as 'atf-run'.

The reporting facilities of this release are quite limited.  There is
no replacement for 'atf-report' yet, and there is no easy way of
debugging failing test programs other than running them by hand.  These
features will mark future milestones and therefore be part of other
releases.

Be aware that this release has suffered very limited field testing.
The test suite for kyua-cli is quite comprehensive, but some bugs may
be left in any place.